--- a/src/components/gl/ProfilePage.module.css
+++ b/src/components/gl/ProfilePage.module.css
@@ -492,8 +492,12 @@
 }
 
 .statCardDisabled {
-  opacity: 0.4;
   pointer-events: none;
+}
+
+.statCardDisabled .statIcon,
+.statCardDisabled .statContent {
+  opacity: 0.4;
 }
 
 .statCardDisabled:hover {
